# HelloCpp

./: CMakeLists.txt  build.sh  hello.cpp  test.sh
googletest/googlemock/scripts/: fuse_gmock_files.py
googletest/googletest/docs/: advanced.md
src/: hello.cpp  mike_math.cpp
test/: CMakeLists.txt  ExampleTests.cpp
